--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,16 @@
 services:
   - type: web
-    name: tg-constructor
+    name: tg-constructor-backend
     env: python
     plan: free
+    region: oregon  # или ближайший к тебе
+    branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: BOT_TOKEN
-        fromDatabase: false
-        value: "твой_бот_токен"
-      - key: CHAT_ID
-        fromDatabase: false
-        value: "твой_chat_id"
-    pythonVersion: "3.11"
+    - key: BOT_TOKEN
+      fromDatabase: false
+      value: ""
+    - key: CHAT_ID
+      fromDatabase: false
+      value: ""
